# slice

./: .cursorrules  .gitignore  DEPLOY.md  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: build-windows.yml
apps/desktop/: package.json
apps/desktop/src/: App.tsx  main.tsx  router.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: FolderTreeSelector.tsx  ImportScreen.tsx  NavRail.tsx  PackEditDialog.tsx  PacksView.tsx  Player.tsx  SampleBrowser.tsx  SampleEditDialog.tsx
apps/desktop/src/components/ui/: badge.tsx  context-menu.tsx  dialog.tsx  input.tsx
apps/desktop/src/contexts/: AppContext.tsx  I18nContext.tsx
apps/desktop/src/i18n/: en.ts  ko.ts
apps/desktop/src/routes/: HomePage.tsx  PackDetailPage.tsx  PlaylistPage.tsx  SettingsPage.tsx  SoundsPage.tsx
apps/landing/: index.html  package.json  style.css
apps/landing/public/: robots.txt  sitemap.xml
apps/landing/src/: App.tsx  index.css
scripts/: release.sh
src/: index.css  router.tsx  types.ts
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FolderTreeSelector.tsx  Player.tsx  Waveform.tsx
src/components/ui/: button.tsx  label.tsx  popover.tsx  tooltip.tsx
src/contexts/: ThemeContext.tsx
src/routes/: PacksPage.tsx
