[package]
name = "slice"
version = "0.1.1"
description = "A sample browser for Splice downloads"
authors = ["jaeho"]
edition = "2021"

[lib]
name = "slice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
symphonia = { version = "0.5", features = ["wav", "pcm", "mp3", "flac", "ogg", "vorbis", "aiff"] }
zip = "2"
regex = "1"
dirs = "5"
rustfft = "6"
